--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "parcel-plugin-static-files-copy": "^2.3.1"
   },
   "dependencies": {
+    "@vaadin/vaadin-icons": "^4.3.1",
     "d3": "^5.15.0",
     "d3-force": "^2.0.1"
   }
